# vexide

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  armv7a-vex-v5.json  armv7a-vexos-eabi.json  armv7a-vexos.json  build.rs  bump.nu  flake.nix  runner.bat  runner.py  runner.sh  rust-toolchain.toml  rustfmt.toml  thumbv7em-vex-exp.json
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  small_issue.md
.github/workflows/: rust.yml
.zed/: settings.json
example/: Cargo.toml  build.rs
example/src/: main.rs
examples/: README.md  addrled.rs  adi.rs  adi_expander.rs  ai_vision.rs  async.rs  bannerless.rs  basic.rs  breakpoint.rs  clawbot.rs  competition.rs  custom_code_sig.rs  data_abort.rs  display.rs  distance.rs  fs.rs  inspect_panic.rs  panic.rs  panic_hook.rs  panic_hooks.rs  pneumatics.rs  screen.rs  smart_devices.rs  split_arcade_drive.rs  sync.rs  tank_drive.rs  task_local_storage.rs  themed_banner.rs  vexlink_manager.rs  vexlink_worker.rs
pros/: CHANGELOG.md  Cargo.toml  README.md
pros-cli/: Cargo.toml
pros-macros/: Cargo.toml
pros-macros/src/: lib.rs
pros-sys/: Cargo.toml  README.md  TODO.md  build.rs
pros-sys/link/: LICENSE
pros-sys/src/: adi.rs  apix.rs  colors.rs  distance.rs  error.rs  ext_adi.rs  gps.rs  imu.rs  lib.rs  link.rs  llemu.rs  misc.rs  motor.rs  optical.rs  pros_entrypoint.h  rtos.rs  serial.rs  vision.rs
pros/examples/: accessories.rs  basic.rs  imu.rs  optical.rs
pros/pros_derive/: Cargo.toml
pros/pros_derive/src/: lib.rs
pros/src/: battery.rs  competition.rs  controller.rs  errno.rs  error.rs  lib.rs  link.rs  math.rs  memory.rs  motor.rs  pid.rs  position.rs  sync.rs  task.rs  time.rs  vexos_env.rs  wasm_env.rs  wasm_memory.rs
pros/src/adi/: mod.rs
pros/src/async_runtime/: executor.rs  mod.rs  reactor.rs  task.rs
pros/src/devices/: mod.rs
pros/src/devices/adi/: mod.rs
pros/src/devices/smart/: distance.rs  gps.rs  imu.rs  link.rs  mod.rs  motor.rs  optical.rs  rotation.rs  vision.rs
pros/src/lcd/: buttons.rs  colors.rs  macros.rs  mod.rs  writer.rs
pros/src/lvgl/: colors.rs
pros/src/multitasking/: mod.rs  mutex.rs  task.rs  tasks.rs
pros/src/sensors/: distance.rs  gps.rs  imu.rs  mod.rs  optical.rs  rotation.rs  vision.rs
pros/src/task/: local.rs  mod.rs  task.rs
src/: errno.rs  lib.rs  motor.rs
src/lcd/: buttons.rs  macros.rs  mod.rs  writer.rs
