[package]
name = "pros-sys"
version = "0.1.6"
edition = "2021"
description = "EFI for the PROS rust bindings"
keywords = ["PROS", "Robotics", "bindings"]
categories = [
    "api-bindings",
    "development-tools::ffi",
    "external-ffi-bindings",
    "no-std",
    "science::robotics",
]
license = "MIT"
repository = "https://github.com/gavin-niederman/pros-rs"
links = "pros"

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
zip = "0.6.4"

[lib]
doctest = false

[features]
xapi = []
