[package]
name = "pros-sys"
version = "0.2.1"
edition = "2021"
description = "EFI for the PROS rust bindings"
keywords = ["PROS", "Robotics", "bindings"]
categories = [
    "api-bindings",
    "development-tools::ffi",
    "external-ffi-bindings",
    "no-std",
    "science::robotics",
]
license = "MIT"
repository = "https://github.com/gavin-niederman/pros-rs"
links = "pros"

[lib]
doctest = false

[features]
xapi = []
