[package]
name = "pros_derive"
version = "0.1.0"
edition = "2021"
description = "proc macros for pros-rs"
license = "MIT"
authors = ["pros-rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0.16", features = ["full"] }
quote = "1.0.27"

[lib]
proc-macro = true
doc = false
